# majsoul.liqi

./: .gitignore  README.md  liqi.json  liqi.proto  main.py
.github/workflows/: updateLiqi.yml
python/: setup.cfg
python/majsoulliqi/: liqi_pb2.py  liqi_pb2.pyi  liqi_pb2_grpc.py
