[metadata]
name = majsoulliqi
version = 0.1.0
description = "majsoul liqi"
author = constellation39
author_email = constellation39@outlook.com
url = https://github.com/constellation39/majsoul.liqi

[options]
include_package_data = True
packages = find:
install_requires = grpcio

[options.package_data]
* = *.pyi
